tests/reference/asr-arrays_09-50ee586.stderr
semantic error: Only those local variables which can be reduced to compile time constant should be used in dimensions of an array.
 --> tests/errors/arrays_09.py:9:12
  |
9 |     x: i64[p, q, r] = empty([q, p, r], dtype=int64)
  |            ^ 
